Added Hero Section Image

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
-/* header {
-  height: auto;
-} */
+.header {
+  background-color: rgb(233, 233, 233);
+}
 .mainLogo {
   height: 80px;
   width: 170px;
